--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@splidejs/react-splide": "^0.7.12",
     "@tanstack/react-query": "^5.7.1",
     "@tanstack/react-query-devtools": "^5.7.1",
     "axios": "^1.6.0",
